Update deps.